Stop circle images from stretching

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
   /* https://coolors.co/231942-7e7f9a-16bac5-fffaff-ff8484 */
-  --c-russian-violet: #231942;
+  --c-russian-violet: rgb(30, 4, 75);
   --c-rhythm: #7E7F9A;
   --c-maximum-blue-green: #16BAC5;
   --c-ghost-white: #FFFAFF;
@@ -122,7 +122,7 @@ h3 {
 
   display: grid;
   grid-template-rows: 1fr 1fr;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: minmax(15rem, 2fr) minmax(15rem, 1fr);
   grid-template-areas:
     "projects announcements"
     "projects trending";
@@ -227,9 +227,9 @@ h3 {
 .trending__profile {
   width: 3rem;
   height: 3rem;
-  border-radius: 1000000px;
   overflow: clip;
   box-shadow: var(--card-shadow);
+  border-radius: 50%;
 }
 .trending__profile > img {
   width: 100%;
